<resources>
    <string name="app_name">DBAndroid</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="home_welcome_message">Welcome Home</string>
    <string name="save_button">Save</string>
    <string name="female_gender_label">Female</string>
    <string name="male_gender_label">Male</string>
    <string name="enter_user_sirname_hint">Enter User SirName</string>
    <string name="enter_user_name_hint">Enter User Name</string>
    <string name="title_activity_list_users">ListUsersActivity</string>
    <string name="all_users">All Users</string>
    <string name="go">Go</string>
    <string name="show_users_button">Show Users</string>
    <string name="title_activity_async">AsyncActivity</string>
</resources>
