<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/home_welcome_message"
        android:textSize="12pt"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/userNameField"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_user_name_hint" />

    <EditText
        android:id="@+id/userSirNameField"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_user_sirname_hint" />

    <RadioGroup
        android:id="@+id/userGender"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/male_gender_label" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/female_gender_label" />
    </RadioGroup>

    <Button
        android:layout_marginTop="50dp"
        android:id="@+id/userSaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_button"
        android:layout_gravity="center_horizontal"
        android:width="400px" />

    <Button
        android:id="@+id/usersDisplayButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_users_button"
        android:layout_gravity="center_horizontal"
        android:width="400px" />

    <Button
        android:id="@+id/asyncButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Show Async"
        android:layout_gravity="center_horizontal"
        android:width="400px" />

</LinearLayout>
